@@ -1,5 +1,5 @@
-SubRip Subtitle File Format Specification
-=========================================
+SubRip
+======
 
   Extension:
 
@@ -7,12 +7,11 @@ SubRip Subtitle File Format Specification
 
   Notes:
 
-    Times are intuitive time-strings. Line-breaks used for line-breaks!
+    Times are hh:mm:ss,sss. Line-breaks used for line-breaks.
     Subtitle numbers serve no purpose for machine parsing. No header.
 
   Sample:
 
-    ------------------------
     1
     00:01:55,600 --> 00:02:00,743
     It's written in the Buddhist Cannon.
@@ -30,7 +29,6 @@ SubRip Subtitle File Format Specification
     00:02:11,614 --> 00:02:15,245
     In the years to come...
     I'll be given the nickname: Malicious West.
-    ------------------------
 
   Tags:
 
